--- a/app/src/main/res/layout/fragment_weather.xml
+++ b/app/src/main/res/layout/fragment_weather.xml
@@ -7,74 +7,23 @@
     android:layout_height="match_parent"
     tools:context=".weather.WeatherFragment">
 
-    <ImageView
-        android:id="@+id/weather_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="@string/weather_icon_404"
-        android:src="@mipmap/weather_sun"
-        app:layout_constraintBottom_toBottomOf="@+id/weather_temperature"
-        app:layout_constraintStart_toStartOf="@+id/weather_location"
-        app:layout_constraintTop_toTopOf="@+id/weather_temperature" />
-
-    <TextView
-        android:id="@+id/weather_temperature"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
-        android:text="@string/weather_temperature_404"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
+    <include
+        layout="@layout/view_weather"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/weather_icon"
-        app:layout_constraintTop_toBottomOf="@+id/weather_day"
-        tools:text="80°" />
-
-    <TextView
-        android:id="@+id/weather_location"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:text="@string/weather_location_404"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:layout_constraintBottom_toTopOf="@+id/weather_day"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.453"
-        app:layout_constraintVertical_chainStyle="packed"
-        tools:text="Provo, Utah" />
+        tools:visibility="visible" />
 
-    <TextView
-        android:id="@+id/weather_day"
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/weather_404"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        app:layout_constraintBottom_toTopOf="@+id/weather_temperature"
-        app:layout_constraintStart_toStartOf="@+id/weather_location"
-        app:layout_constraintTop_toBottomOf="@+id/weather_location"
-        tools:text="Wednesday 4PM" />
-
-    <TextView
-        android:id="@+id/weather_condition"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:text="@string/weather_404"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        app:layout_constraintBottom_toBottomOf="@+id/weather_day"
-        app:layout_constraintEnd_toEndOf="@+id/weather_location"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/weather_day"
-        app:layout_constraintTop_toTopOf="@+id/weather_day"
-        tools:text="Sunny" />
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
